Add JAVA_ARGS support